@@ -1,3 +1,8 @@
+2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/disk/cryptodisk.c (grub_cmd_cryptomount): Strip brackets
+	around device name if necessarry.
+
 2012-12-10  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>
 
 	* util/grub-install.in: Follow the symbolic link parameter added
